--- a/index.html
+++ b/index.html
@@ -2,33 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <title>Frontend Mentor | NFT preview card component</title>
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-    .attribution {
-        font-size: 11px;
-        text-align: center;
-    }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <title>Frontend Mentor | NFT preview card component</title>
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+  .attribution {
+    font-size: 11px;
+    text-align: center;
+  }
 
-    .attribution a {
-        color: hsl(228, 45%, 44%);
-    }
-    </style>
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
+  </style>
 </head>
 
 <body>
-    Equilibrium #3429
-    Our Equilibrium collection promotes balance and calm.
-    0.041 ETH
-    3 days left
-    Creation of Jules Wyvern
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+  <div class="card">
+    <img class="eth-image" src="" alt="Equilibrium image"></img>
+    <div class="eth-content">
+      <h1 class="eth-name"> Equilibrium #3429 <h1>
+          <p class="eth-desc"> Our Equilibrium collection promotes balance and calm.</p>
+          <div class="eth-pricetimebox">
+            <span class="eth-price">
+              <svg></svg>
+              <p>0.041ETH</p>
+            </span>
+            <span class="eth-timeleft">
+              <svg></svg>
+              <p>3 days left</p>
+            </span>
+          </div>
     </div>
+    <div class="eth-creator">
+      <img class="eth-creatorimage" src="">
+      <p class="eth-creatorinfo">Creation of <a href="#">Jules Wyvern</a> </p>
+    </div>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
 </body>
 
 </html>
