Defined styles for texts

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <div class="card">
     <img class="eth-image" src="" alt="Equilibrium image"></img>
     <div class="eth-content">
-      <h1 class="eth-name"> Equilibrium #3429 <h1>
-          <p class="eth-desc"> Our Equilibrium collection promotes balance and calm.</p>
+      <h1 class="eth-name"> Equilibrium #3429 </h1>
+      <p class="eth-desc"> Our Equilibrium collection promoters balance and calm.</p>
           <div class="eth-pricetimebox">
             <span class="eth-price">
               <svg></svg>
-              <p>0.041ETH</p>
+              <p>0.041 ETH</p>
             </span>
             <span class="eth-timeleft">
               <svg></svg>
@@ -37,5 +37,8 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+<script>
+document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+</script>
 
 </html>
