Updated card with equilibrium image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="card">
-    <img class="eth-image" src="" alt="Equilibrium image"></img>
+    <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image"></img>
     <div class="eth-content">
       <h1 class="eth-name"> Equilibrium #3429 </h1>
       <p class="eth-desc"> Our Equilibrium collection promoters balance and calm.</p>
