--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
 <body>
   <div class="card">
-    <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image"></img>
+    <div class=eth-imagecontainer>
+      <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image"></img>
+      <img class="overlap" src="images/icon-view.svg">
+    </div>
     <div class="eth-content">
       <h1 class="eth-name"> Equilibrium #3429 </h1>
       <p class="eth-desc"> Our Equilibrium collection promoters balance and calm.</p>
-          <div class="eth-pricetimebox">
-            <span class="eth-price">
-              <svg></svg>
-              <p>0.041 ETH</p>
-            </span>
-            <span class="eth-timeleft">
-              <svg></svg>
-              <p>3 days left</p>
-            </span>
-          </div>
+      <div class="eth-pricetimebox">
+        <span class="eth-price">
+          <img src="images/icon-ethereum.svg" alt="">
+          <p>0.041 ETH</p>
+        </span>
+        <span class="eth-timeleft">
+          <img src="images/icon-clock.svg" alt="">
+          <p>3 days left</p>
+        </span>
+      </div>
     </div>
     <div class="eth-creator">
       <img class="eth-creatorimage" src="">
