Added styles to creator section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="eth-creator">
-      <img class="eth-creatorimage" src="">
+      <img class="eth-creatorimage" src="images/image-avatar.png" alt="Jules Wyvern">
       <p class="eth-creatorinfo">Creation of <a href="#">Jules Wyvern</a> </p>
     </div>
   </div>
