--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 <body>
   <div class="card">
     <div class=eth-imagecontainer>
-      <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image"></img>
+      <a href="#" title="">
+        <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image">
+        </img>
+      </a>
+      
       <img class="overlap" src="images/icon-view.svg">
     </div>
     <div class="eth-content">
-      <h1 class="eth-name"> Equilibrium #3429 </h1>
+      <h1 class="eth-name"><a href="#">Equilibrium #3429 </a></h1>
       <p class="eth-desc"> Our Equilibrium collection promoters balance and calm.</p>
       <div class="eth-pricetimebox">
         <span class="eth-price">
