--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <img class="eth-image" src="images/image-equilibrium.jpg" alt="Equilibrium image">
         </img>
       </a>
-      
       <img class="overlap" src="images/icon-view.svg">
     </div>
     <div class="eth-content">
@@ -41,7 +40,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/jide-jide">JIDE-JIDE</a>.
   </div>
 </body>
 <script>
